fine-tuning of minor details

--- a/html/article-1.html
+++ b/html/article-1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/articles/article.css" />
     <title>Creating a CI/CD pipeline using Github Actions</title>
+    <link rel="icon" type="image/png" href="../assets/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -20,7 +21,7 @@
     <header>
       <nav class="nav">
         <ul>
-          <li><a href="/">jahazieljbh.dev</a></li>
+          <li><a href="/">Writings.dev</a></li>
         </ul>
         <ul>
           <li id="backButton"><a class="fa fa-arrow-left"></a></li>
